--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "url-join": "^4.0.0"
   },
   "devDependencies": {
+    "autoprefixer": "^10.2.5",
     "cli-glob": "^0.1.0",
     "eslint": "^7.21.0",
     "eslint-config-airbnb": "^18.2.0",
@@ -49,7 +50,9 @@
     "eslint-plugin-prettier": "^3.3.1",
     "eslint-plugin-react": "^7.22.0",
     "eslint-plugin-react-hooks": "^4.2.0",
+    "gatsby-plugin-postcss": "^4.1.0",
     "gh-pages": "^3.1.0",
+    "postcss": "^8.2.8",
     "prettier": "^2.2.1",
     "remark-cli": "^9.0.0",
     "remark-preset-lint-recommended": "^5.0.0",
@@ -57,6 +60,7 @@
     "stylelint-config-prettier": "^8.0.2",
     "stylelint-config-standard": "^20.0.0",
     "stylelint-prettier": "^1.2.0",
+    "tailwindcss": "^2.0.4",
     "write-good": "^1.0.8"
   },
   "keywords": [
